--- a/objects/1.css
+++ b/objects/1.css
@@ -2427,7 +2427,7 @@ div.ui-dialog-titlebar > .ui-dialog-titlebar-close {
 }
 
 .dnnLoading {
-    background: #fff url(../../images/loading.gif) no-repeat center center;
+    background: #fff url(loading.gif) no-repeat center center;
     position: absolute;
     z-index: 9999;
 }
